--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -11,20 +11,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up JDK
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
+      - name: Install Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: 8.2
 
-      - name: Build APK
-        run: ./gradlew assembleRelease
+      - name: Build Release APK
+        run: gradle assembleRelease
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-            name: HDMI-Notifier
-            path: app/build/outputs/apk/release/app-release.apk
+          name: HDMI-Notifier
+          path: app/build/outputs/apk/**/*.apk
